@@ -436,7 +436,13 @@ module ActiveResource
       #   Note.exists(1349)
       #   # => false
       def exists?(id, options = {})
-        id && !find_single(id, options).nil?
+        if id
+          prefix_options, query_options = split_options(options[:params])
+          path = element_path(id, prefix_options, query_options)
+          response = connection.head(path, headers)
+          response.code == 200
+        end
+        # id && !find_single(id, options).nil?
       rescue ActiveResource::ResourceNotFound
         false
       end
